<resources>
    <string name="app_name">Parola del giorno</string>

    <string name="admob_app_id">ca-app-pub-4441008333572114~9393374757</string>
    <string name="admob_banner_ad">ca-app-pub-4441008333572114/5206717736</string>

    <string name="settings">Impostazioni</string>
    <string name="words_learnt">Parole imparate</string>

    <string name="definition">Definizione</string>
    <string name="etymology">Etimologia</string>

    <string name="word_copied">Parola copiata negli appunti</string>
    <string name="the_word_of_the_day_is">La parola del giorno è {{*{{word}}*}}. Scopri una nuova parola ogni giorno, installa {{*{{link}}*}}!</string>
    <string name="open_the_app_to_learn_more">Fai clic qui e apri l\'app per scoprire questa parola!</string>
    <string name="share_text">Condividi</string>

    <string name="separator">•</string>

    <string name="source_from">Estratto da {{*{{source}}*}}</string>

    <string name="switch_to_the_new_app_msg1">Attenzione: effettuare il download della nuova app</string>
    <string name="switch_to_the_new_app_msg2">Le app “Parola del giorno” e “Word of the Day” sono state unite in un’unica app per offrirti una migliore esperienza e nuove funzionalità. Ti invito a scaricare la nuova app per continuare a ricevere la tua parola del giorno!</string>
    <string name="switch_to_the_new_app_msg3">Mi scuso per il disagio, prometto che mi farò perdonare!</string>
    <string name="switch_to_the_new_app_msg4">Scarica la nuova App</string>


    <!-- Settings -->
    <string name="restart_the_app_to_apply_the_changes">Riavvia l\'app per applicare le modifiche</string>

    <string name="switch_ads_settings">Mostra pubblicità</string>
    <string name="switch_ads_settings_details">In questo modo supporterai lo sviluppatore in maniera gratuita per te</string>

    <string name="switch_notification_settings">Mostra notifiche</string>
    <string name="switch_notification_settings_details">Riceverai una notifica ogni giorno alle 07:00 di mattina.\nPotrebbe non funzionare correttamente a causa di impostazioni del sistema operativo sull\'ottimizzazione della batteria</string>

    <!-- Messages -->
    <string name="loading_word">Caricamento della parola del giorno in corso…</string>
    <string name="offline_mode">Non sei connesso a Internet, per questo stai visualizzando l\'ultimo aggiornamento salvato sul dispositivo della parola.</string>
    <string name="internet_not_available">Internet non è disponibile. Riprova più tardi.</string>
    <string name="error_try_later">Spiacente! I server non stanno rispondendo.\nRiprova più tardi.</string>
    <string name="no_daily_word_try_later">C\'è un problema e al momento non è disponibile la parola del giorno.\nSi prega di provare più tardi.</string>
    <string name="button_try_again">Riprova</string>
</resources>