<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nestedScrollListen"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">

        <TextView
            android:id="@+id/separator"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:flow_horizontalAlign="start"
            android:flow_verticalAlign="center"
            android:paddingLeft="10sp"
            android:paddingRight="10sp"
            android:text="@string/separator"
            android:textSize="20sp"
            android:textStyle="italic"
            android:visibility="gone"
            app:layout_constraintStart_toEndOf="@+id/typeElement"
            app:layout_constraintTop_toBottomOf="@+id/wordElement"
            tools:visibility="visible" />

        <TextView
            android:id="@+id/definitionElement"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:flow_horizontalAlign="start"
            android:flow_verticalAlign="center"
            android:padding="10sp"
            android:textSize="20sp"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/titleDefinition"
            tools:text="definition"
            tools:visibility="visible" />

        <TextView
            android:id="@+id/titleDefinition"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:flow_horizontalAlign="start"
            android:flow_verticalAlign="center"
            android:padding="10sp"
            android:text="@string/definition"
            android:textSize="24sp"
            android:textStyle="bold"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/phoneticsElement"
            tools:visibility="visible" />

        <TextView
            android:id="@+id/etymologyElement"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:flow_horizontalAlign="start"
            android:flow_verticalAlign="center"
            android:padding="10sp"
            android:textSize="20sp"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/titleEtymology"
            tools:text="etymology"
            tools:visibility="visible" />

        <TextView
            android:id="@+id/titleEtymology"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:flow_horizontalAlign="start"
            android:flow_verticalAlign="center"
            android:padding="10sp"
            android:text="@string/etymology"
            android:textSize="24sp"
            android:textStyle="bold"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/definitionElement"
            tools:visibility="visible" />

        <TextView
            android:id="@+id/phoneticsElement"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:flow_horizontalAlign="start"
            android:flow_verticalAlign="center"
            android:fontFamily="monospace"
            android:paddingLeft="10sp"
            android:paddingRight="10sp"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/separator"
            app:layout_constraintTop_toBottomOf="@+id/wordElement"
            tools:text="/phonetics/" />

        <TextView
            android:id="@+id/typeElement"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:flow_horizontalAlign="start"
            android:flow_verticalAlign="center"
            android:paddingLeft="10sp"
            android:paddingRight="10sp"
            android:textSize="20sp"
            android:textStyle="italic"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/wordElement"
            tools:text="type" />

        <TextView
            android:id="@+id/wordElement"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:flow_horizontalAlign="start"
            android:flow_verticalAlign="center"
            android:paddingLeft="10sp"
            android:paddingTop="15sp"
            android:paddingRight="10sp"
            android:textSize="50sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/topBarMain"
            tools:text="Word" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/topBarMain"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/ic_top_bar"
            android:paddingLeft="10sp"
            android:paddingRight="10sp"
            android:paddingBottom="10sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:context=".MainActivity">

            <TextView
                android:id="@+id/dateElement"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:flow_horizontalAlign="center"
                android:flow_verticalAlign="center"
                android:fontFamily="sans-serif-black"
                android:paddingTop="10sp"
                android:paddingBottom="10sp"
                android:text="···"
                android:textColor="@color/white"
                android:textSize="40sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="YYYY-MM-DD" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <ImageView
            android:id="@+id/copyButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginLeft="10dp"
            android:visibility="gone"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/topBarMain"
            app:srcCompat="?attr/actionModeCopyDrawable"
            tools:visibility="visible" />

        <ImageView
            android:id="@+id/shareButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginLeft="10dp"
            android:visibility="gone"
            app:layout_constraintStart_toEndOf="@+id/copyButton"
            app:layout_constraintTop_toBottomOf="@+id/topBarMain"
            app:srcCompat="?attr/actionModeShareDrawable"
            tools:visibility="visible" />

        <ImageView
            android:id="@+id/settingsSettings"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:layout_marginRight="10dp"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="@+id/wordElement"
            app:layout_constraintTop_toBottomOf="@+id/topBarMain"
            app:srcCompat="@drawable/ic_settings"
            tools:ignore="VectorDrawableCompat"
            tools:visibility="visible" />

        <com.google.android.gms.ads.AdView
            android:id="@+id/adView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:visibility="gone"
            app:adSize="SMART_BANNER"
            app:adUnitId="@string/admob_banner_ad"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            tools:visibility="visible"></com.google.android.gms.ads.AdView>

        <View
            android:id="@+id/view"
            android:layout_width="match_parent"
            android:layout_height="20dp"
            app:layout_constraintBottom_toTopOf="@+id/adView"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/etymologyElement" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>